dex2jar cleaned (stable)